[gd_scene load_steps=9 format=3 uid="uid://bhyt64pqn04l3"]

[ext_resource type="Script" uid="uid://ducvuibswiqqs" path="res://Scripts/enemy_frogs.gd" id="1_ttexj"]
[ext_resource type="Texture2D" uid="uid://ctg4a5nxi21od" path="res://Sprites/Characters/frog_1.png" id="2_iasq5"]
[ext_resource type="Texture2D" uid="uid://def5wggn8gwyk" path="res://Sprites/Characters/frog_2.png" id="3_sk0nc"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_gs0ep"]
radius = 9.0
height = 22.0

[sub_resource type="Animation" id="Animation_kvxda"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_iasq5")]
}

[sub_resource type="Animation" id="Animation_xx133"]
resource_name = "jump"
length = 3.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.0666667),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_sk0nc")]
}

[sub_resource type="Animation" id="Animation_iasq5"]
resource_name = "ground"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_iasq5")]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_etskf"]
_data = {
&"RESET": SubResource("Animation_kvxda"),
&"ground": SubResource("Animation_iasq5"),
&"jump": SubResource("Animation_xx133")
}

[node name="EnemyFrogs" type="Area2D"]
script = ExtResource("1_ttexj")

[node name="Sprite" type="Sprite2D" parent="."]
texture = ExtResource("2_iasq5")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_gs0ep")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_etskf")
}

[node name="PauseTimer" type="Timer" parent="."]

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="PauseTimer" to="." method="_on_pause_timer_timeout"]
